--- a/SiteMockup/select-bank-account.html
+++ b/SiteMockup/select-bank-account.html
@@ -101,6 +101,7 @@
                             <div id="collapse1_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Bank: </strong>ING<br><strong>Type: </strong>DEBIT<br><strong>Added in Money Bunny: </strong>09/05/2021</p>
+                                    <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Select</a></div>
                                 </div>
                             </div>
                         </div>
@@ -117,6 +118,7 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Bank:</strong> BCR<br><strong>Type:</strong> DEBIT
 <br><strong>Added in Money Bunny:</strong> 10/05/2021</p>
+<div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Select</a></div>
                                 </div>
                             </div>
                         </div>
@@ -132,6 +134,7 @@
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Bank: </strong>BCR<br><strong>Type: </strong>DEBIT
 <br><strong>Added in Money Bunny: </strong>10/05/2021</p>
+<div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Select</a></div>
                                 </div>
                             </div>
                         </div>
@@ -146,6 +149,7 @@
                             <div id="collapse4_13" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7"><strong>Bank: </strong>Banca Transilvania<br><strong>Type:</strong> CREDIT&nbsp;<br><strong>Added in Money Bunny:</strong> 11/05/2021</p>
+                                    <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="https://mobiri.se">Select</a></div>
                                 </div>
                             </div>
                         </div>
