--- a/Money-Bunny/src/index.html
+++ b/Money-Bunny/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MoneyBunny</title>
+  <title>Money Bunny Online Banking</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 </head>
 <body>
   <app-root></app-root>
